<resources>
    <string name="app_name">Remote Control</string>
    <string name="mytv">My TV</string>
    <string name="tv_pow_label">TV Power:</string>
    <string name="speaker_label">Speaker Volume:</string>
    <string name="cur_ch_label">Current Channel:</string>
    <string name="myrc">My Remote Control</string>
    <string name="rc_pow_label">Power</string>
    <string name="vol_label">Volume</string>
    <string name="ch_label">Channel</string>
    <string name="fav_ch">Favorite \nChannel</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn_ch_plus">CH+</string>
    <string name="btn_ch_minus">CH-</string>
    <string name="btn_ch_fav1">FOX</string>
    <string name="btn_ch_fav2">ESPN</string>
    <string name="btn_ch_fav3">CBS</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="speaker_default">50</string>
    <string name="cur_ch_default">003</string>
    <string name="switch_dvr">SWITCH TO DVR</string>
    <string name="switch_config">CONFIGURE</string>
    <string name="mydvr">My DVR</string>
    <string name= "dvr_pow_label">DVR Power:</string>
    <string name="state_label">State:</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="pause">PAUSE</string>
    <string name="ff">FAST FORWARD</string>
    <string name="frwd">FAST REWIND</string>
    <string name="record">RECORD</string>
    <string name="switch_tv">SWITCH TO TV</string>
    <string name="state_default">Stopped</string>
    <string name="dvr_rc">DVR Remote Control</string>
    <string name="config_label">Configure Favorite Channel</string>
    <string name="fav_ch_config_label">Favorite Channel Button</string>
    <string name="fav_ch_name">Label</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>

</resources>
